--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,8 @@
     <property name="compile.debug" value="true"/>
     <property name="test.reports" location="testreport"/>
 
+    <property name="resource" location="src/main/resources"/>
+
     <property name="sourceversion" value="1.8"/>
 
     <path id="classpath.base">
@@ -172,6 +174,10 @@
     <copy todir="${build}" flatten="true">
         <fileset dir="${src}">
             <include name="bin/*.sh"/>
+        </fileset>
+    </copy>
+    <copy todir="${build.test}" flatten="true">
+        <fileset dir="${resource}">
         </fileset>
     </copy>
     </target>
