--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,3 +13,12 @@ log4j.appender.file.Append=false
 log4j.appender.file.File=application.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-9t %-5p %c{1}.line%L : %m%n
+
+log4j.logger.simpledb.LogFile=DEBUG, stdout
+log4j.additivity.simpledb.LogFile=false
+
+log4j.logger.simpledb.WaitForGraph=INFO, stdout
+log4j.additivity.simpledb.WaitForGraph=false
+
+log4j.logger.simpledb.ConcurrentStatus=INFO, stdout
+log4j.additivity.simpledb.ConcurrentStatus=false
